--- a/app/src/main/res/layout/fragment_real_time_trend.xml
+++ b/app/src/main/res/layout/fragment_real_time_trend.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".view.ui.main.realtimetrend.RealTimeTrendFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <TextView
+  <data>
+    <variable
+      name="viewModel"
+      type="io.github.ovso.globaltrend.view.ui.main.dailytrend.DailyTrendViewModel"
+      />
+  </data>
+  <FrameLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="RealTimeTrend"
-    android:gravity="center"/>
+    >
 
-</FrameLayout>
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="center"
+      android:text="RealTimeTrend"
+      />
+
+  </FrameLayout>
+</layout>
