--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,30 +5,36 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".view.ui.main.MainActivity">
+  tools:context=".view.ui.main.MainActivity"
+  >
 
   <com.google.android.material.appbar.AppBarLayout
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:theme="@style/AppTheme.AppBarOverlay">
+    android:layout_height="wrap_content"
+    android:theme="@style/AppTheme.AppBarOverlay"
+    >
 
     <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="?attr/colorPrimary"
-      app:popupTheme="@style/AppTheme.PopupOverlay"/>
+      app:popupTheme="@style/AppTheme.PopupOverlay"
+      />
 
     <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabs_main"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"/>
+      android:layout_height="wrap_content"
+      />
 
   </com.google.android.material.appbar.AppBarLayout>
 
   <androidx.viewpager.widget.ViewPager
     android:id="@+id/viewpager_main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
