--- a/app/src/main/res/layout/fragment_daily_trend.xml
+++ b/app/src/main/res/layout/fragment_daily_trend.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/refreshlayout_daily_trend"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     >
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recyclerview_daily_trend"
+  <data>
+    <variable
+        name="viewModel"
+        type="io.github.ovso.globaltrend.view.ui.main.dailytrend.DailyTrendViewModel"
+        />
+  </data>
+  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+      android:id="@+id/refreshlayout_daily_trend"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      />
+      app:onRefreshListener="@{() -> viewModel.onRefresh()}"
+      app:refreshing="@{viewModel.isLoading.get()}"
+      >
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_daily_trend"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        />
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+</layout>
