--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,11 +10,18 @@
         type="io.github.ovso.globaltrend.view.ui.search.SearchViewModel"
         />
   </data>
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recyclerview_search"
+  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-      tools:listitem="@layout/item_search"
-      />
+      app:onRefreshListener="@{() -> viewModel.onRefresh()}"
+      app:refreshing="@{viewModel.isLoading.get()}"
+      >
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_search"
+        />
+  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
