--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/web"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.web.WebFragment"
+    tools:context="..WebFragment"
     >
 
   <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="Hello"
+      android:id="@+id/message"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="WebFragment"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
       />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
