--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/web"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="..WebFragment"
     >
-
-  <TextView
-      android:id="@+id/message"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="WebFragment"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+  <data>
+    <variable
+        name="viewModel"
+        type="io.github.ovso.globaltrend.view.ui.web.WebViewModel"
+        />
+  </data>
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      >
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:loadUrl="@{viewModel.urlObField.get()}"
+        app:webChromeClient="@{viewModel.webChromeClient}"
+        app:webViewClient="@{viewModel.webViewClient}"
+        />
+  </FrameLayout>
+</layout>
