--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+  <style name="ProgressBarHorizontal" parent="android:Widget.ProgressBar.Horizontal">
+    <item name="android:minHeight">40dip</item>
+    <item name="android:maxHeight">40dip</item>
+    <item name="android:progressDrawable">@drawable/progress_horizontal_web</item>
+  </style>
+
 </resources>
