--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -2,6 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools"
     >
   <data>
     <variable
@@ -9,24 +10,36 @@
         type="io.github.ovso.globaltrend.view.ui.web.WebViewModel"
         />
   </data>
-  <FrameLayout
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:orientation="vertical"
       >
-    <WebView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:loadUrl="@{viewModel.urlObField.get()}"
-        app:webChromeClient="@{viewModel.webChromeClient}"
-        app:webViewClient="@{viewModel.webViewClient}"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
+      <WebView
+          android:id="@+id/webview_web"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          app:loadUrl="@{viewModel.urlObField.get()}"
+          app:webChromeClient="@{viewModel.webChromeClient}"
+          app:webViewClient="@{viewModel.webViewClient}"
+          />
+      <androidx.core.widget.ContentLoadingProgressBar
+          android:id="@+id/progressbar_web"
+          android:layout_width="match_parent"
+          android:layout_height="5dp"
+          android:progress="@{viewModel.progressObField.get()}"
+          app:showAndHide="@{viewModel.isLoadingObField.get()}"
+          style="@style/ProgressBarHorizontal"
+          />
+    </FrameLayout>
+    <include
+        layout="@layout/layout_web_navigation"
+        bind:viewModel="@{viewModel}"
         />
-    <androidx.core.widget.ContentLoadingProgressBar
-        android:id="@+id/progressbar_web"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:progress="@{viewModel.progressObField.get()}"
-        app:showAndHide="@{viewModel.isLoadingObField.get()}"
-        style="@style/ProgressBarHorizontal"
-        />
-  </FrameLayout>
+  </LinearLayout>
 </layout>
