--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_countries"
-          android:title="@string/action_countries"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+  <item
+      android:id="@+id/action_countries"
+      android:orderInCategory="100"
+      android:title="@string/action_countries"
+      app:showAsAction="never"/>
+
+  <item
+      android:id="@+id/action_total"
+      android:orderInCategory="100"
+      android:title="@string/action_total_country_trend"
+      app:showAsAction="never"/>
 </menu>
