--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,13 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
       android:id="@+id/action_countries"
-      android:orderInCategory="100"
       android:title="@string/action_countries"
-      app:showAsAction="never"/>
-
-  <item
-      android:id="@+id/action_total"
-      android:orderInCategory="100"
-      android:title="@string/action_total_country_trend"
-      app:showAsAction="never"/>
+      android:icon="@drawable/ic_filter_list"
+      app:showAsAction="always"/>
 </menu>
