--- a/app/src/main/res/layout/activity_country.xml
+++ b/app/src/main/res/layout/activity_country.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
-  <data>
-    <variable
-        name="viewModel"
-        type="io.github.ovso.globaltrend.view.ui.country.CountryViewModel"
-        />
-  </data>
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recyclerview_country"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
-</layout>
+    android:id="@+id/fragment_fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    />
