--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -29,9 +29,7 @@
       android:id="@+id/imageview_country_item_flag"
       android:layout_width="50dp"
       android:layout_height="32dp"
-      android:layout_marginBottom="8dp"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="16dp"
       android:gravity="center"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -51,5 +49,16 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:srcCompat="@tools:sample/avatars[14]"
+      />
+  <TextView
+      android:id="@+id/textview_country_item_cname"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="12sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/imageview_country_item_flag"
+      app:layout_constraintStart_toStartOf="@+id/imageview_country_item_flag"
+      app:layout_constraintTop_toBottomOf="@+id/imageview_country_item_flag"
+      tools:text="덴마크"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
