--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,8 @@
     <item name="android:background">?android:attr/selectableItemBackground</item>
   </style>
 
+  <style name="AppTheme.Launcher" parent="AppTheme.NoActionBar">
+    <item name="android:windowBackground">@drawable/splash_background</item>
+  </style>
+
 </resources>
