--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string-array name="tab_names">
-    <item>Daily trending</item>
-    <item>Real-time trending</item>
+  <string-array name="country_codes">
+    <item>GR</item>
+    <item>NG</item>
+    <item>ZA</item>
+    <item>NL</item>
+    <item>NO</item>
+    <item>NZ</item>
+    <item>TW</item>
+    <item>KR</item>
+    <item>DK</item>
+    <item>DE</item>
+    <item>RU</item>
+    <item>RO</item>
+    <item>MY</item>
+    <item>MX</item>
+    <item>US</item>
+    <item>VN</item>
+    <item>BE</item>
+    <item>BR</item>
+    <item>SA</item>
+    <item>SE</item>
+    <item>CH</item>
+    <item>SG</item>
+    <item>AR</item>
+    <item>IE</item>
+    <item>GB</item>
+    <item>AU</item>
+    <item>AT</item>
+    <item>UA</item>
+    <item>IL</item>
+    <item>EG</item>
+    <item>IT</item>
+    <item>IN</item>
+    <item>ID</item>
+    <item>JP</item>
+    <item>CZ</item>
+    <item>CL</item>
+    <item>CA</item>
+    <item>KE</item>
+    <item>CO</item>
+    <item>TH</item>
+    <item>TR</item>
+    <item>PT</item>
+    <item>PL</item>
+    <item>FR</item>
+    <item>FI</item>
+    <item>PH</item>
+    <item>HU</item>
+    <item>HK</item>
+  </string-array>
+  <string-array name="country_names">
+    <item>그리스</item>
+    <item>나이지리아</item>
+    <item>남아프리카</item>
+    <item>네덜란드</item>
+    <item>노르웨이</item>
+    <item>뉴질랜드</item>
+    <item>대만</item>
+    <item>대한민국</item>
+    <item>덴마크</item>
+    <item>독일</item>
+    <item>러시아</item>
+    <item>루마니아</item>
+    <item>말레이시아</item>
+    <item>멕시코</item>
+    <item>미국</item>
+    <item>베트남</item>
+    <item>벨기에</item>
+    <item>브라질</item>
+    <item>사우디아라비아</item>
+    <item>스웨덴</item>
+    <item>스위스</item>
+    <item>싱가포르</item>
+    <item>아르헨티나</item>
+    <item>아일랜드</item>
+    <item>영국</item>
+    <item>오스트레일리아</item>
+    <item>오스트리아</item>
+    <item>우크라이나</item>
+    <item>이스라엘</item>
+    <item>이집트</item>
+    <item>이탈리아</item>
+    <item>인도</item>
+    <item>인도네시아</item>
+    <item>일본</item>
+    <item>체코</item>
+    <item>칠레</item>
+    <item>캐나다</item>
+    <item>케냐</item>
+    <item>콜롬비아</item>
+    <item>태국</item>
+    <item>터키</item>
+    <item>포르투갈</item>
+    <item>폴란드</item>
+    <item>프랑스</item>
+    <item>핀란드</item>
+    <item>필리핀</item>
+    <item>헝가리</item>
+    <item>홍콩</item>
+  </string-array>
+  <string-array name="country_flags">
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_Greece.svg/240px-Flag_of_Greece.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Flag_of_Nigeria.svg/240px-Flag_of_Nigeria.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/240px-Flag_of_South_Africa.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Flag_of_the_Netherlands.svg/240px-Flag_of_the_Netherlands.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Flag_of_Norway.svg/240px-Flag_of_Norway.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Flag_of_New_Zealand.svg/240px-Flag_of_New_Zealand.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/Flag_of_the_Republic_of_China.svg/240px-Flag_of_the_Republic_of_China.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/240px-Flag_of_South_Korea.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Flag_of_Denmark.svg/240px-Flag_of_Denmark.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Flag_of_Germany.svg/240px-Flag_of_Germany.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/240px-Flag_of_Russia.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/240px-Flag_of_Romania.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Flag_of_Malaysia.svg/240px-Flag_of_Malaysia.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Flag_of_Mexico.svg/240px-Flag_of_Mexico.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Flag_of_the_United_States.svg/240px-Flag_of_the_United_States.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/240px-Flag_of_Vietnam.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/240px-Flag_of_Belgium_%28civil%29.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Flag_of_Brazil.svg/240px-Flag_of_Brazil.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Flag_of_Saudi_Arabia.svg/240px-Flag_of_Saudi_Arabia.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Flag_of_Sweden.svg/240px-Flag_of_Sweden.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Switzerland.svg/240px-Flag_of_Switzerland.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Flag_of_Singapore.svg/240px-Flag_of_Singapore.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Flag_of_Argentina.svg/240px-Flag_of_Argentina.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Flag_of_Ireland.svg/240px-Flag_of_Ireland.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Flag_of_the_United_Kingdom.svg/240px-Flag_of_the_United_Kingdom.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Flag_of_Australia.svg/240px-Flag_of_Australia.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/240px-Flag_of_Austria.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/240px-Flag_of_Ukraine.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Flag_of_Israel.svg/240px-Flag_of_Israel.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Flag_of_Egypt.svg/240px-Flag_of_Egypt.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Flag_of_Italy.svg/240px-Flag_of_Italy.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_India.svg/240px-Flag_of_India.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Flag_of_Indonesia.svg/240px-Flag_of_Indonesia.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Flag_of_Japan.svg/240px-Flag_of_Japan.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/240px-Flag_of_the_Czech_Republic.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Flag_of_Chile.svg/240px-Flag_of_Chile.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Flag_of_Canada.svg/240px-Flag_of_Canada.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Kenya.svg/240px-Flag_of_Kenya.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Colombia.svg/240px-Flag_of_Colombia.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_Thailand.svg/240px-Flag_of_Thailand.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Flag_of_Turkey.svg/240px-Flag_of_Turkey.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_Portugal.svg/240px-Flag_of_Portugal.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/240px-Flag_of_Poland.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Flag_of_France.svg/240px-Flag_of_France.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Flag_of_Finland.svg/240px-Flag_of_Finland.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Flag_of_the_Philippines.svg/240px-Flag_of_the_Philippines.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/240px-Flag_of_Hungary.svg.png</item>
+    <item>https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Flag_of_Hong_Kong.svg/500px-Flag_of_Hong_Kong.svg.png</item>
   </string-array>
 </resources>
