--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:drawable="@color/colorLauncherIconBg"/>
-  <item
-      android:drawable="@drawable/trending_up"
-      android:gravity="center"/>
+  <item>
+    <bitmap
+        android:gravity="center"
+        android:mipMap="true"
+        android:src="@mipmap/ic_launcher_round"/>
+  </item>
 </layer-list>
