--- a/app/src/main/res/layout/fragment_country.xml
+++ b/app/src/main/res/layout/fragment_country.xml
@@ -13,6 +13,7 @@
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      app:colorSchemeResources="@{viewModel.swipeLoadingColor}"
       app:onRefreshListener="@{() -> viewModel.onRefresh()}"
       app:refreshing="@{viewModel.isLoading.get()}"
       >
