--- a/app/src/main/res/layout/activity_country.xml
+++ b/app/src/main/res/layout/activity_country.xml
@@ -21,11 +21,19 @@
         />
   </com.google.android.material.appbar.AppBarLayout>
 
-  <FrameLayout
-      android:id="@+id/fragment_fragment_container"
+  <LinearLayout
+      android:id="@+id/linearlayout_country_content_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:orientation="vertical"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-      />
+      >
+    <FrameLayout
+        android:id="@+id/fragment_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+  </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
