--- a/app/src/main/res/layout/layout_web_navigation.xml
+++ b/app/src/main/res/layout/layout_web_navigation.xml
@@ -24,7 +24,7 @@
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/button_web_nav_back"
         android:scaleType="fitCenter"
-        android:visibility="@{viewModel.canGoBackObField.get() ? View.VISIBLE : View.INVISIBLE}"
+        android:visibility="@{viewModel.canGoBackObField ? View.VISIBLE : View.INVISIBLE}"
         app:enabled="@{viewModel.canGoBackObField}"
         app:srcCompat="@drawable/ic_keyboard_arrow_left"
         style="@style/WebviewNavigationButtonStyle"
@@ -32,7 +32,7 @@
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/button_web_nav_forw"
         android:scaleType="fitCenter"
-        android:visibility="@{viewModel.canGoForwObField.get() ? View.VISIBLE : View.INVISIBLE}"
+        android:visibility="@{viewModel.canGoForwObField ? View.VISIBLE : View.INVISIBLE}"
         app:enabled="@{viewModel.canGoForwObField}"
         app:srcCompat="@drawable/ic_keyboard_arrow_right"
         style="@style/WebviewNavigationButtonStyle"
