--- a/app/src/main/res/layout/fragment_daily_trend.xml
+++ b/app/src/main/res/layout/fragment_daily_trend.xml
@@ -6,7 +6,7 @@
   <data>
     <variable
         name="viewModel"
-        type="io.github.ovso.globaltrend.view.ui.main.dailytrend.DailyTrendViewModel"
+        type="io.github.ovso.globaltrend.view.ui.dailytrend.DailyTrendViewModel"
         />
   </data>
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
