--- a/app/src/main/res/layout/layout_all_ads_banner.xml
+++ b/app/src/main/res/layout/layout_all_ads_banner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.gms.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/av_all"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
