--- a/app/src/main/res/layout/activity_country.xml
+++ b/app/src/main/res/layout/activity_country.xml
@@ -24,7 +24,7 @@
         android:orientation="vertical"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <FrameLayout
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
