feat: Apply Hilt

--- a/app/src/main/res/layout/fragment_combo_box.xml
+++ b/app/src/main/res/layout/fragment_combo_box.xml
@@ -7,5 +7,5 @@
     android:clipToPadding="false"
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingBottom="@dimen/list_item_spacing_half"
-    tools:context=".view.ui.dailytrend.ItemListDialogFragment"
+    tools:context=".view.ui.dailytrend.ComboBoxDialogFragment"
     tools:listitem="@layout/fragment_item_list_dialog_list_dialog_item" />
