--- a/app/src/main/res/layout/fragment_combo_box.xml
+++ b/app/src/main/res/layout/fragment_combo_box.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingBottom="@dimen/list_item_spacing_half"
-    tools:context=".view.ui.dailytrend.ComboBoxDialogFragment"
-    tools:listitem="@layout/fragment_item_list_dialog_list_dialog_item" />
+    tools:context=".view.ui.combobox.ComboBoxDialogFragment">
+
+    <include
+        android:id="@+id/include_combo_box_trend"
+        layout="@layout/item_trend" />
+</LinearLayout>
