--- a/app/src/main/res/layout/activity_trend_detail.xml
+++ b/app/src/main/res/layout/activity_trend_detail.xml
@@ -9,11 +9,16 @@
 
     <ImageView
         android:id="@+id/iv_trend_detail"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@id/rv_trend_detail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
         tools:src="@color/colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,43 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_trend_detail"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/iv_trend_detail_thumb"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/tv_trend_detail_desc"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="10dp"
-            android:gravity="center_vertical"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_trend_detail_thumb"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_trend_detail_thumb"
-            app:layout_constraintTop_toTopOf="@id/iv_trend_detail_thumb"
-            tools:text="놀면 뭐하니 짐캐리 이동휘 유야호 님께용기 받아 소감" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@id/iv_trend_detail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
